crates/harmonius_rg/tests/ui/command_buffer_scope_lifetime.stderr
error: lifetime may not live long enough
 --> tests/ui/command_buffer_scope_lifetime.rs:6:62
  |
6 |     let _escaped: &mut Encoder<'static> = with_encoder(|enc| enc);
  |                                                         ---- ^^^ returning this value requires that `'1` must outlive `'2`
  |                                                         |  |
  |                                                         |  return type of closure is &mut Encoder<'2>
  |                                                         has type `&'1 mut Encoder<'1>`
  |
  = note: requirement occurs because of a mutable reference to `Encoder<'_>`
  = note: mutable references are invariant over their type parameter
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
